# PROJETO-IA

./: App.py  pyproject.toml  testes.ipynb
